GWT Building for charts